force-app/main/default/objects/SMS_Message_Metadata__c/SMS_Message_Metadata__c.object-meta.xml
<CustomObject>
    <label>SMS Message Metadata</label>
    <nameField>
        <label>SMS Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Message Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>