force-app/main/default/objects/SMS_Message_Metadata__c/fields/IsNew__c.field-meta.xml
<CustomField>
    <fullName>IsNew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNew</label>
    <type>Checkbox</type>
</CustomField>