force-app/main/default/objects/SMS_Message_Metadata__c/fields/SMS__c.field-meta.xml
<CustomField>
    <fullName>SMS__c</fullName>
    <label>SMS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>