force-app/main/default/objects/SMS_Message_Metadata__c/fields/SMS_Message__c.field-meta.xml
<CustomField>
    <fullName>SMS_Message__c</fullName>
    <label>SMS Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>