force-app/main/default/objects/SMS_Message_Metadata__c/listViews/DISPOSITION_1_WEEK_4.listView-meta.xml
<ListView>
    <fullName>DISPOSITION_1_WEEK_4</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>DISPOSITION_1_WEEK_4</value>
    </filters>
    <label>DISPOSITION-1 WEEK-4</label>
</ListView>