force-app/main/default/objects/SMS_Message_Metadata__c/listViews/DISPOSITION_2_WEEK_1.listView-meta.xml
<ListView>
    <fullName>DISPOSITION_2_WEEK_1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>DISPOSITION_2_WEEK_1</value>
    </filters>
    <label>DISPOSITION-2 WEEK-1</label>
</ListView>