force-app/main/default/objects/SMS_Message_Metadata__c/listViews/NDS_SMS.listView-meta.xml
<ListView>
    <fullName>NDS_SMS</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>NDS</value>
    </filters>
    <label>NDS SMS</label>
</ListView>