force-app/main/default/objects/SMS_Message_Metadata__c/listViews/QRMCA_DISPOSITION_1_WEEK_1.listView-meta.xml
<ListView>
    <fullName>QRMCA_DISPOSITION_1_WEEK_1</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>QRMCA_DISPOSITION_1_WEEK_1</value>
    </filters>
    <label>QRMCA_DISPOSITION_1_WEEK_1</label>
</ListView>