force-app/main/default/objects/SMS_Message_Metadata__c/listViews/QRMCA_Week_1.listView-meta.xml
<ListView>
    <fullName>QRMCA_Week_1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>QRMCA_DISPOSITION_1</value>
    </filters>
    <label>QRMCA Week 1</label>
</ListView>